--- a/css/index.css
+++ b/css/index.css
@@ -1,111 +1,182 @@
 :root {
-    --texto: rgb(9, 35, 83);
-    --boton: rgb(88, 171, 227);
+    --verde: #42dca3;
+    --negro: #000000;
     --blanco: #fff;
 }
 
 * {
-    box-sizing: border-box !important;
-    font-family: 'Roboto', sans-serif !important;
-    font-size: 120%;
+    font-family: 'Cabin', sans-serif !important;
+}
+
+button {
+    border-radius: 0;
+    padding: 0.7%;
+    color: var(--verde);
+    background-color: var(--negro);
+    border: solid var(--verde) 1.5px;
+}
+
+button:hover {
+    color: var(--negro);
+    background-color: var(--verde) !important;
+    border: solid var(--negro) 1.5px;
+}
+
+header {
+    flex-direction: row;
+    background: url(../img/intro-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+span {
+    color: var(--verde);
+}
+
+header nav {
+    padding: 4%;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+header nav section {
+    width: 50%;
+    font-size: 16px;
+    justify-content: space-evenly;
+}
+
+header nav section a {
+    text-decoration: none;
+    color: var(--blanco);
+}
+
+header div {
+    color: var(--blanco);
+    padding: 5%;
+    flex-direction: column;
+    text-align: center;
+}
+
+header div h1 {
+    font-size: 100px;
+}
+
+header div p {
+    font-size: 22px;
+    padding: 4%;
+}
+
+#desc {
+    background-color: var(--negro);
+    color: var(--blanco);
+    padding: 10%;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+    font-size: 18px;
+}
+
+#desc h1 {
+    font-size: 32px;
+}
+
+#desc section {
+    padding: 2%;
 }
 
 .wrapper {
     display: flex;
-    color: var(--texto);
-    font-size: 130%;
-    padding: 1%;
-    text-align: left;
     flex-wrap: wrap;
 }
 
-@media all and (min-width:768px) {
-    .wrapper section div {
-        width: 60% !important;
-    }
-    .wrapper section {
-        width: 50%;
-        text-align: left;
-    }
-    .wrapper section p {
-        width: 150%;
-    }
-    .wrapper section h1 {
-        width: 150%;
-    }
-    .titulo {
-        font-size: 300% !important;
-        font-weight: bold;
-        padding: 3% 2% 15%;
-    }
-    .imagen {
-        padding-top: 10%;
-        width: 100%;
-    }
-    button {
-        margin: 5%;
-        padding: 2% 4%;
-        border-radius: 5%;
-        border-style: solid;
-        font-weight: bold;
-        font-size: 70%;
-    }
-    .demo {
-        background-color: var(--boton);
-        color: var(--blanco);
-        border-color: var(--boton);
-    }
-    .iniciar {
-        background-color: var(--blanco);
-        color: var(--botones);
-        border-color: var(--boton);
-    }
-}
-
-@media all and (min-width:0) and (max-width:768px) {
-    .wrapper section {
-        width: 100%;
-    }
-    .wrapper {
-        width: 100%;
-    }
-    .titulo {
-        font-size: 200%;
-        font-weight: bold;
-        padding: 3% 2% 5%;
-        width: 100%;
-    }
-    .imagen {
-        padding-top: 10%;
-        width: 100%;
-    }
-    button {
-        margin: 5%;
-        padding: 2% 4%;
-        border-radius: 2%;
-        border-style: solid;
-        font-weight: bold;
-        font-size: 70%;
-        width: 90%;
-    }
-    br {
-        display: none;
-    }
-}
-
-.demo {
-    background-color: var(--boton);
+.descuento {
+    background-image: url(../img/downloads-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    padding: 10%;
+    text-align: center;
     color: var(--blanco);
-    border-color: var(--boton);
 }
 
-.iniciar {
-    background-color: var(--blanco);
-    color: var(--boton);
-    border-color: var(--boton);
+.descuento section {
+    padding: 2%;
 }
 
-.iniciar:hover {
-    background-color: var(--boton);
-    color: var(--blanco)
+.descuento section h1 {
+    font-size: 40px;
+}
+
+.descuento section button {
+    font-size: 20px;
+    background-color: transparent;
+}
+
+.contacto {
+    background-color: var(--negro);
+    padding: 10%;
+    color: var(--blanco);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 18px;
+}
+
+.contacto section {
+    padding: 2%;
+}
+
+.contacto section h1 {
+    font-size: 32px;
+}
+
+.contacto section button {
+    margin: 1%;
+    font-size: 20px;
+}
+
+.reserva {
+    background-color: var(--negro);
+    display: flex;
+    flex-direction: column;
+    color: var(--blanco);
+    padding: 2%;
+}
+
+.reserva h1 {
+    text-align: center;
+    padding: 4%;
+}
+
+.reserva input {
+    margin-top: 1%;
+    margin-bottom: 1%;
+    padding: 0.5%;
+}
+
+.reserva p {
+    padding-bottom: 2%;
+}
+
+.reserva label {
+    font-size: 18px;
+}
+
+.terminos {
+    padding-top: 2%;
+}
+
+.boton {
+    text-align: center;
+    padding: 2%;
+}
+
+footer {
+    text-align: center;
+    font-size: 14px;
+    background-color: var(--negro);
+    color: var(--blanco);
+    padding: 2%;
 }
